Fix overflow issue

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -15,7 +15,6 @@ html {
   font-style: normal;
   font-size: 16px;
   min-height: 100%;
-  overflow-x: hidden;
   width: 100%;
 }
 
